tests/ui/nll/user-annotations/adt-nullary-enums.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/adt-nullary-enums.rs:33:41
   |
LL |       let c = 66;
   |           - binding `c` declared here
LL | /     combine(
LL | |         SomeEnum::SomeVariant(Cell::new(&c)),
   | |                                         ^^ borrowed value does not live long enough
LL | |         SomeEnum::SomeOtherVariant::<Cell<&'static u32>>,
LL | |     );
   | |_____- argument requires that `c` is borrowed for `'static`
LL |   }
   |   - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-nullary-enums.rs:41:41
   |
LL |   fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                     -- lifetime `'a` defined here
LL |       let c = 66;
   |           - binding `c` declared here
LL | /     combine(
LL | |         SomeEnum::SomeVariant(Cell::new(&c)),
   | |                                         ^^ borrowed value does not live long enough
LL | |         SomeEnum::SomeOtherVariant::<Cell<&'a u32>>,
LL | |     );
   | |_____- argument requires that `c` is borrowed for `'a`
LL |   }
   |   - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-nullary-enums.rs:54:45
   |
LL |   fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                                -- lifetime `'a` defined here
LL |       let _closure = || {
LL |           let c = 66;
   |               - binding `c` declared here
LL | /         combine(
LL | |             SomeEnum::SomeVariant(Cell::new(&c)),
   | |                                             ^^ borrowed value does not live long enough
LL | |             SomeEnum::SomeOtherVariant::<Cell<&'a u32>>,
LL | |         );
   | |_________- argument requires that `c` is borrowed for `'a`
LL |       };
   |       - `c` dropped here while still borrowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
